infrastructures/cdk.out/VpcStack.template.json
{
  "Resources": {
    "pickmeecscdkvpc71CBFF4B": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/Resource"
      }
    },
    "pickmeecscdkvpcpickmepublicsubnet1Subnet1SubnetA0873145": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/20",
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "pickme-public-subnet-1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet1/Subnet"
      }
    },
    "pickmeecscdkvpcpickmepublicsubnet1Subnet1RouteTable5A406BFC": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet1/RouteTable"
      }
    },
    "pickmeecscdkvpcpickmepublicsubnet1Subnet1RouteTableAssociationCB521CA7": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "pickmeecscdkvpcpickmepublicsubnet1Subnet1RouteTable5A406BFC"
        },
        "SubnetId": {
          "Ref": "pickmeecscdkvpcpickmepublicsubnet1Subnet1SubnetA0873145"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet1/RouteTableAssociation"
      }
    },
    "pickmeecscdkvpcpickmepublicsubnet1Subnet1DefaultRouteD9ADB9E5": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "pickmeecscdkvpcpickmepublicsubnet1Subnet1RouteTable5A406BFC"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "pickmeecscdkvpcIGWB7A84FBD"
        }
      },
      "DependsOn": [
        "pickmeecscdkvpcVPCGW3507A481"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet1/DefaultRoute"
      }
    },
    "pickmeecscdkvpcpickmepublicsubnet1Subnet1EIP2D346EAD": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet1/EIP"
      }
    },
    "pickmeecscdkvpcpickmepublicsubnet1Subnet1NATGateway9D04D947": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "pickmeecscdkvpcpickmepublicsubnet1Subnet1SubnetA0873145"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "pickmeecscdkvpcpickmepublicsubnet1Subnet1EIP2D346EAD",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet1/NATGateway"
      }
    },
    "pickmeecscdkvpcpickmepublicsubnet1Subnet2SubnetD3D4A820": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.16.0/20",
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "pickme-public-subnet-1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet2/Subnet"
      }
    },
    "pickmeecscdkvpcpickmepublicsubnet1Subnet2RouteTableF5479ADC": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet2/RouteTable"
      }
    },
    "pickmeecscdkvpcpickmepublicsubnet1Subnet2RouteTableAssociationD9F6B579": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "pickmeecscdkvpcpickmepublicsubnet1Subnet2RouteTableF5479ADC"
        },
        "SubnetId": {
          "Ref": "pickmeecscdkvpcpickmepublicsubnet1Subnet2SubnetD3D4A820"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet2/RouteTableAssociation"
      }
    },
    "pickmeecscdkvpcpickmepublicsubnet1Subnet2DefaultRoute4E65F51D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "pickmeecscdkvpcpickmepublicsubnet1Subnet2RouteTableF5479ADC"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "pickmeecscdkvpcIGWB7A84FBD"
        }
      },
      "DependsOn": [
        "pickmeecscdkvpcVPCGW3507A481"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-public-subnet-1Subnet2/DefaultRoute"
      }
    },
    "pickmeecscdkvpcpickmeisolatedsubnet1Subnet1Subnet6217EFDE": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.32.0/24",
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "pickme-isolated-subnet-1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-isolated-subnet-1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-isolated-subnet-1Subnet1/Subnet"
      }
    },
    "pickmeecscdkvpcpickmeisolatedsubnet1Subnet1RouteTable0615028E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-isolated-subnet-1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-isolated-subnet-1Subnet1/RouteTable"
      }
    },
    "pickmeecscdkvpcpickmeisolatedsubnet1Subnet1RouteTableAssociation09DF75DE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "pickmeecscdkvpcpickmeisolatedsubnet1Subnet1RouteTable0615028E"
        },
        "SubnetId": {
          "Ref": "pickmeecscdkvpcpickmeisolatedsubnet1Subnet1Subnet6217EFDE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-isolated-subnet-1Subnet1/RouteTableAssociation"
      }
    },
    "pickmeecscdkvpcpickmeisolatedsubnet1Subnet2Subnet7B3E544E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.33.0/24",
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "pickme-isolated-subnet-1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-isolated-subnet-1Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-isolated-subnet-1Subnet2/Subnet"
      }
    },
    "pickmeecscdkvpcpickmeisolatedsubnet1Subnet2RouteTable24798E03": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-isolated-subnet-1Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-isolated-subnet-1Subnet2/RouteTable"
      }
    },
    "pickmeecscdkvpcpickmeisolatedsubnet1Subnet2RouteTableAssociation7B765D15": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "pickmeecscdkvpcpickmeisolatedsubnet1Subnet2RouteTable24798E03"
        },
        "SubnetId": {
          "Ref": "pickmeecscdkvpcpickmeisolatedsubnet1Subnet2Subnet7B3E544E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-isolated-subnet-1Subnet2/RouteTableAssociation"
      }
    },
    "pickmeecscdkvpcpickmeprivatesubnet1Subnet1SubnetC7232287": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.34.0/28",
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "pickme-private-subnet-1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-private-subnet-1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-private-subnet-1Subnet1/Subnet"
      }
    },
    "pickmeecscdkvpcpickmeprivatesubnet1Subnet1RouteTable590A9D75": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-private-subnet-1Subnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-private-subnet-1Subnet1/RouteTable"
      }
    },
    "pickmeecscdkvpcpickmeprivatesubnet1Subnet1RouteTableAssociationF86F40F5": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet1RouteTable590A9D75"
        },
        "SubnetId": {
          "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet1SubnetC7232287"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-private-subnet-1Subnet1/RouteTableAssociation"
      }
    },
    "pickmeecscdkvpcpickmeprivatesubnet1Subnet1DefaultRoute1C52AF74": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet1RouteTable590A9D75"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "pickmeecscdkvpcpickmepublicsubnet1Subnet1NATGateway9D04D947"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-private-subnet-1Subnet1/DefaultRoute"
      }
    },
    "pickmeecscdkvpcpickmeprivatesubnet1Subnet2SubnetBEB5DDDF": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.34.16/28",
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "pickme-private-subnet-1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-private-subnet-1Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-private-subnet-1Subnet2/Subnet"
      }
    },
    "pickmeecscdkvpcpickmeprivatesubnet1Subnet2RouteTableE8A0BB42": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc/pickme-private-subnet-1Subnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-private-subnet-1Subnet2/RouteTable"
      }
    },
    "pickmeecscdkvpcpickmeprivatesubnet1Subnet2RouteTableAssociation147588DA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet2RouteTableE8A0BB42"
        },
        "SubnetId": {
          "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet2SubnetBEB5DDDF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-private-subnet-1Subnet2/RouteTableAssociation"
      }
    },
    "pickmeecscdkvpcpickmeprivatesubnet1Subnet2DefaultRouteD56EE122": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet2RouteTableE8A0BB42"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "pickmeecscdkvpcpickmepublicsubnet1Subnet1NATGateway9D04D947"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/pickme-private-subnet-1Subnet2/DefaultRoute"
      }
    },
    "pickmeecscdkvpcIGWB7A84FBD": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/IGW"
      }
    },
    "pickmeecscdkvpcVPCGW3507A481": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "InternetGatewayId": {
          "Ref": "pickmeecscdkvpcIGWB7A84FBD"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/VPCGW"
      }
    },
    "pickmeecscdkvpcvpcgatewayendpoint58767AC2": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".s3"
            ]
          ]
        },
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "RouteTableIds": [
          {
            "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet1RouteTable590A9D75"
          },
          {
            "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet2RouteTableE8A0BB42"
          }
        ],
        "VpcEndpointType": "Gateway"
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/vpc-gateway-endpoint/Resource"
      }
    },
    "pickmeecscdkvpcvpcendpointecrSecurityGroup71EB0534": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "VpcStack/pickme-ecs-cdk-vpc/vpc-endpoint-ecr/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "pickmeecscdkvpc71CBFF4B",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "pickmeecscdkvpc71CBFF4B",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc"
          }
        ],
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/vpc-endpoint-ecr/SecurityGroup/Resource"
      }
    },
    "pickmeecscdkvpcvpcendpointecrC2C0D46F": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecr.api"
            ]
          ]
        },
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "pickmeecscdkvpcvpcendpointecrSecurityGroup71EB0534",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet1SubnetC7232287"
          },
          {
            "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet2SubnetBEB5DDDF"
          }
        ],
        "VpcEndpointType": "Interface"
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/vpc-endpoint-ecr/Resource"
      }
    },
    "pickmeecscdkvpcvpcendpointssmSecurityGroup2C859FDD": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "VpcStack/pickme-ecs-cdk-vpc/vpc-endpoint-ssm/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "pickmeecscdkvpc71CBFF4B",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "pickmeecscdkvpc71CBFF4B",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc"
          }
        ],
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/vpc-endpoint-ssm/SecurityGroup/Resource"
      }
    },
    "pickmeecscdkvpcvpcendpointssm001A96F9": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ssm"
            ]
          ]
        },
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "pickmeecscdkvpcvpcendpointssmSecurityGroup2C859FDD",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet1SubnetC7232287"
          },
          {
            "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet2SubnetBEB5DDDF"
          }
        ],
        "VpcEndpointType": "Interface"
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/vpc-endpoint-ssm/Resource"
      }
    },
    "pickmeecscdkvpcvpcendpointsecretsmanagerSecurityGroup276E6AF1": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "VpcStack/pickme-ecs-cdk-vpc/vpc-endpoint-secrets-manager/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "pickmeecscdkvpc71CBFF4B",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "pickmeecscdkvpc71CBFF4B",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc"
          }
        ],
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/vpc-endpoint-secrets-manager/SecurityGroup/Resource"
      }
    },
    "pickmeecscdkvpcvpcendpointsecretsmanager924FE502": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".secretsmanager"
            ]
          ]
        },
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "pickmeecscdkvpcvpcendpointsecretsmanagerSecurityGroup276E6AF1",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet1SubnetC7232287"
          },
          {
            "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet2SubnetBEB5DDDF"
          }
        ],
        "VpcEndpointType": "Interface"
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/vpc-endpoint-secrets-manager/Resource"
      }
    },
    "pickmeecscdkvpcvpcendpointcloudwatchSecurityGroup62C0432F": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "VpcStack/pickme-ecs-cdk-vpc/vpc-endpoint-cloudwatch/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "pickmeecscdkvpc71CBFF4B",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "pickmeecscdkvpc71CBFF4B",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/pickme-ecs-cdk-vpc"
          }
        ],
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/vpc-endpoint-cloudwatch/SecurityGroup/Resource"
      }
    },
    "pickmeecscdkvpcvpcendpointcloudwatch5127FE29": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".monitoring"
            ]
          ]
        },
        "VpcId": {
          "Ref": "pickmeecscdkvpc71CBFF4B"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "pickmeecscdkvpcvpcendpointcloudwatchSecurityGroup62C0432F",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet1SubnetC7232287"
          },
          {
            "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet2SubnetBEB5DDDF"
          }
        ],
        "VpcEndpointType": "Interface"
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/pickme-ecs-cdk-vpc/vpc-endpoint-cloudwatch/Resource"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAAE02PzW7CMBCEn4W7MTVq1WtRhBCXKkoq7s5mo5qfdWSvQSjKu9cOKea0s9+OR2MllfqUb4svffNLaE+rAaxDOdSs4SQq9DY4QFFY8uwCsCg6yrSjeGgNG0ujSAkIazkcekinQ1mIMjRnA3VoCKenWVU2MP7o5oyZZ7bx3oLRKfhpTmK7L9P41rzTjDd9F6Uz1yhz8J4YXdT/hkeTedtw/NfvBYnFTGLZLbW9NcSz9blOSZ0GfPXUCMEZvu+cDf1U/RWMoyDbojz61VW9S/Uh1eLojVm6QGwuKKvH/AOBSvsXdwEAAA=="
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "af-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  },
  "Outputs": {
    "ExportsOutputRefpickmeecscdkvpcpickmeisolatedsubnet1Subnet1Subnet6217EFDE3494D76E": {
      "Value": {
        "Ref": "pickmeecscdkvpcpickmeisolatedsubnet1Subnet1Subnet6217EFDE"
      },
      "Export": {
        "Name": "VpcStack:ExportsOutputRefpickmeecscdkvpcpickmeisolatedsubnet1Subnet1Subnet6217EFDE3494D76E"
      }
    },
    "ExportsOutputRefpickmeecscdkvpcpickmeisolatedsubnet1Subnet2Subnet7B3E544E7379AEE7": {
      "Value": {
        "Ref": "pickmeecscdkvpcpickmeisolatedsubnet1Subnet2Subnet7B3E544E"
      },
      "Export": {
        "Name": "VpcStack:ExportsOutputRefpickmeecscdkvpcpickmeisolatedsubnet1Subnet2Subnet7B3E544E7379AEE7"
      }
    },
    "ExportsOutputRefpickmeecscdkvpc71CBFF4B72115341": {
      "Value": {
        "Ref": "pickmeecscdkvpc71CBFF4B"
      },
      "Export": {
        "Name": "VpcStack:ExportsOutputRefpickmeecscdkvpc71CBFF4B72115341"
      }
    },
    "ExportsOutputRefpickmeecscdkvpcpickmepublicsubnet1Subnet1SubnetA0873145C88EE1BC": {
      "Value": {
        "Ref": "pickmeecscdkvpcpickmepublicsubnet1Subnet1SubnetA0873145"
      },
      "Export": {
        "Name": "VpcStack:ExportsOutputRefpickmeecscdkvpcpickmepublicsubnet1Subnet1SubnetA0873145C88EE1BC"
      }
    },
    "ExportsOutputRefpickmeecscdkvpcpickmepublicsubnet1Subnet2SubnetD3D4A820FE375FA3": {
      "Value": {
        "Ref": "pickmeecscdkvpcpickmepublicsubnet1Subnet2SubnetD3D4A820"
      },
      "Export": {
        "Name": "VpcStack:ExportsOutputRefpickmeecscdkvpcpickmepublicsubnet1Subnet2SubnetD3D4A820FE375FA3"
      }
    },
    "ExportsOutputRefpickmeecscdkvpcpickmeprivatesubnet1Subnet1SubnetC723228767B1D01D": {
      "Value": {
        "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet1SubnetC7232287"
      },
      "Export": {
        "Name": "VpcStack:ExportsOutputRefpickmeecscdkvpcpickmeprivatesubnet1Subnet1SubnetC723228767B1D01D"
      }
    },
    "ExportsOutputRefpickmeecscdkvpcpickmeprivatesubnet1Subnet2SubnetBEB5DDDF7912AE13": {
      "Value": {
        "Ref": "pickmeecscdkvpcpickmeprivatesubnet1Subnet2SubnetBEB5DDDF"
      },
      "Export": {
        "Name": "VpcStack:ExportsOutputRefpickmeecscdkvpcpickmeprivatesubnet1Subnet2SubnetBEB5DDDF7912AE13"
      }
    }
  }
}
